--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,36 @@
-name: CI - Build Check
+name: CI & Push to ACR
 
 on:
   push:
-    branches: ["**"]
-  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Docker Build Check - Backend
-      run: docker build -t reflects-backend ./backend
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Docker Build Check - Frontend
-      run: docker build -t reflects-frontend ./frontend
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Log in to ACR
+        run: |
+          az acr login --name avyayregistry
+
+      - name: Build and Push Backend
+        run: |
+          docker build -t avyayregistry.azurecr.io/avyay-backend:latest ./backend
+          docker push avyayregistry.azurecr.io/avyay-backend:latest
+
+      - name: Build and Push Frontend
+        run: |
+          docker build -t avyayregistry.azurecr.io/avyay-frontend:latest ./frontend
+          docker push avyayregistry.azurecr.io/avyay-frontend:latest
