--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,15 @@
 FROM python:3.11-slim-bullseye
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+EXPOSE 8000
 
 CMD ["uvicorn", "reflects.main:app", "--host", "0.0.0.0", "--port", "8000"]
