--- a/k8/ingress.yaml
+++ b/k8/ingress.yaml
@@ -3,19 +3,20 @@ kind: Ingress
 metadata:
   name: avyay-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /api(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: backend-service
                 port:
                   number: 8000
-          - path: /
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
