--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,17 @@ on:
     branches:
       - main
 
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    env:
+      ACR_NAME: avyayregistry
+      ACR_LOGIN_SERVER: avyayregistry.azurecr.io
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Azure
         uses: azure/login@v1
@@ -23,16 +23,17 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Log in to ACR
-        run: |
-          az acr login --name avyayregistry
+        run: az acr login --name ${{ env.ACR_NAME }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build and Push Backend
         run: |
-          docker build -t avyayregistry.azurecr.io/avyay-backend:latest ./backend
-          docker push avyayregistry.azurecr.io/avyay-backend:latest
+          docker build -t $ACR_LOGIN_SERVER/avyay-backend:latest ./backend
+          docker push $ACR_LOGIN_SERVER/avyay-backend:latest
 
       - name: Build and Push Frontend
         run: |
-          docker buildx create --use --name tempbuilder 2>/dev/null || docker buildx use tempbuilder
-          docker buildx build --platform linux/amd64 -t avyayregistry.azurecr.io/avyay-frontend:latest ./frontend --push
-
+          docker build -t $ACR_LOGIN_SERVER/avyay-frontend:latest ./frontend
+          docker push $ACR_LOGIN_SERVER/avyay-frontend:latest
