--- a/k8/frontend-deployment.yml
+++ b/k8/frontend-deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: youracr.azurecr.io/simple-frontend:latest
+          image: avyayregistry.azurecr.io/avyay-frontend:latest
           ports:
             - containerPort: 80
