--- a/k8/ingress.yaml
+++ b/k8/ingress.yaml
@@ -3,20 +3,20 @@ kind: Ingress
 metadata:
   name: avyay-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /api(/|$)(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: backend-service
                 port:
                   number: 8000
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
