--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Build and Push Backend
         run: |
           docker buildx create --use || true
-          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-backend:latest1 ./backend --push
+          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-backend:latest ./backend --push
 
       - name: Build and Push Frontend
         run: |
-          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-frontend:latest1 ./frontend --push
+          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-frontend:latest ./frontend --push
