--- a/k8/frontend-deployment.yml
+++ b/k8/frontend-deployment.yml
@@ -17,3 +17,5 @@ spec:
           image: avyayregistry.azurecr.io/avyay-frontend:latest
           ports:
             - containerPort: 80
+      imagePullSecrets:
+        - name: acr-auth
