--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      ACR_NAME: avyayregistry
-      ACR_LOGIN_SERVER: avyayregistry.azurecr.io
+      ACR_NAME: reflectacr
+      ACR_LOGIN_SERVER: reflectacr.azurecr.io
 
     steps:
       - name: Checkout Code
