--- a/k8/backend-service.yml
+++ b/k8/backend-service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: reflectns
 spec:
   selector:
     app: avyay-backend
