--- a/k8/frontend-service.yml
+++ b/k8/frontend-service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: reflectns
 spec:
   selector:
     app: avyay-frontend
