--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - REDIS_HOST=host.docker.internal
       - REDIS_PORT=6379
       - RATE_LIMIT_MODE=fixed
+      - AZURE_SAS_TOKEN=sp=rwdl&st=2025-05-10T21:26:06Z&se=2025-05-11T05:26:06Z&sv=2024-11-04&sr=c&sig=%2Fh5yI6WDf3bXFu45qesoUV4voHFK1mJTiUJxONScgTY%3D
+      - AZURE_STORAGE_CONNECTION_STRING=https://reflectstorage.blob.core.windows.net/uploads?sp=rwdl&st=2025-05-10T21:26:06Z&se=2025-05-11T05:26:06Z&sv=2024-11-04&sr=c&sig=%2Fh5yI6WDf3bXFu45qesoUV4voHFK1mJTiUJxONScgTY%3D
+      - AZURE_STORAGE_CONTAINER_NAME=uploads 
     networks:
       - app-network
 
