--- a/k8/ingress.yaml
+++ b/k8/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: reflectingress
+  name: reflect-ingress
   namespace: reflectns
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
