--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - DB_PASS=avyay123
       - DB_HOST=host.docker.internal
       - JWT_SECRET=avyaysecret
-      - REDIS_HOST=host.docker.internal
-      - REDIS_PORT=6379
+      - REDIS_HOST=reflectredis.redis.cache.windows.ne
+      - REDIS_PORT=6380
       - RATE_LIMIT_MODE=fixed
       - AZURE_SAS_TOKEN=sp=rwdl&st=2025-05-10T21:26:06Z&se=2025-05-11T05:26:06Z&sv=2024-11-04&sr=c&sig=%2Fh5yI6WDf3bXFu45qesoUV4voHFK1mJTiUJxONScgTY%3D
       - AZURE_STORAGE_CONNECTION_STRING=https://reflectstorage.blob.core.windows.net/uploads?sp=rwdl&st=2025-05-10T21:26:06Z&se=2025-05-11T05:26:06Z&sv=2024-11-04&sr=c&sig=%2Fh5yI6WDf3bXFu45qesoUV4voHFK1mJTiUJxONScgTY%3D
