--- a/k8/ingress.yaml
+++ b/k8/ingress.yaml
@@ -4,13 +4,14 @@ metadata:
   name: reflect-ingress
   namespace: reflectns
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /api(/|$)(.*)
+            pathType: ImplementationSpecific
             pathType: Prefix
             backend:
               service:
