--- a/k8/backend-deployment.yml
+++ b/k8/backend-deployment.yml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: backend
           image: reflectacr.azurecr.io/avyay-backend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           env:
