--- a/k8/backend-deployment.yml
+++ b/k8/backend-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: reflectacr.azurecr.io/avyay-backend:latest
+          image: reflectacr.azurecr.io/avyay-backend:latest1
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
