--- a/k8/backend-deployment.yml
+++ b/k8/backend-deployment.yml
@@ -21,20 +21,28 @@ spec:
             - containerPort: 8000
           env:
             - name: DB_HOST
-              value: your-azure-postgres-host
+              value: reflectdb.postgres.database.azure.com
             - name: DB_PORT
               value: "5432"
             - name: DB_NAME
-              value: avyay
+              value: reflectmain
             - name: DB_USER
-              value: avyay_user
+              value: reflect
             - name: DB_PASS
-              value: avyay123
+              value: dyhcoC-0xodme-byfmum
             - name: REDIS_HOST
-              value: your-azure-redis-host
+              value: reflectred.redis.cache.windows.net
+            - name: REDIS_PASS
+              value: HinLSU2AFpvbQtSeFf2FLq1i7sJCc2UbzAzCaACs9B4
             - name: REDIS_PORT
-              value: "6379"
+              value: "6380"
             - name: JWT_SECRET
               value: avyaysecret
             - name: RATE_LIMIT_MODE
               value: fixed
+            - name: AZURE_SAS_TOKEN
+              value: sp=rwdl&st=2025-05-10T21:26:06Z&se=2025-05-11T05:26:06Z&sv=2024-11-04&sr=c&sig=%2Fh5yI6WDf3bXFu45qesoUV4voHFK1mJTiUJxONScgTY%3D
+            - name: AZURE_STORAGE_CONNECTION_STRING
+              value: https://reflectstorage.blob.core.windows.net/uploads?sp=rwdl&st=2025-05-10T21:26:06Z&se=2025-05-11T05:26:06Z&sv=2024-11-04&sr=c&sig=%2Fh5yI6WDf3bXFu45qesoUV4voHFK1mJTiUJxONScgTY%3D
+            - name: AZURE_STORAGE_CONTAINER_NAME
+              value: uploads
