--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -35,7 +35,7 @@ http {
 
         # Main location block
         location / {
-            try_files $uri $uri/ /index.html;  # Fallback to index.html if no match
+            try_files $uri $uri/ =404;
         }
 
         # Add other location rules here if necessary
