--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,4 +32,6 @@ jobs:
           kubectl apply -f k8/backend-service.yml
           kubectl apply -f k8/frontend-deployment.yml
           kubectl apply -f k8/frontend-service.yml
-          kubectl apply -f k8/ingress.yaml
+          kubectl apply -f backend-ingress.yaml -n reflectns
+          kubectl apply -f frontend-ingress.yaml -n reflectns
+
