--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx:alpine
 
-COPY . /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY . /usr/share/nginx/html
+RUN chmod -R 755 /usr/share/nginx/html
 
 EXPOSE 80
