--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,44 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and Push Backend
+      - name: Install Trivy
+        uses: aquasecurity/trivy-action@master
+
+      - name: Scan Backend Dockerfile (config scan)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: config
+          scan-ref: ./backend
+          format: table
+          exit-code: 1
+
+      - name: Build Backend Image
         run: |
           docker buildx create --use || true
-          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-backend:latest1 ./backend --push
+          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-backend:latest ./backend --load
 
-      - name: Build and Push Frontend
+      - name: Scan Backend Image (vulnerability scan)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.ACR_LOGIN_SERVER }}/avyay-backend:latest
+          format: table
+          exit-code: 1
+          ignore-unfixed: true
+
+      - name: Push Backend Image
+        run: docker push $ACR_LOGIN_SERVER/avyay-backend:latest
+
+      - name: Build Frontend Image
         run: |
-          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-frontend:latest ./frontend --push
+          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-frontend:latest ./frontend --load
+
+      - name: Scan Frontend Image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.ACR_LOGIN_SERVER }}/avyay-frontend:latest
+          format: table
+          exit-code: 1
+          ignore-unfixed: true
+
+      - name: Push Frontend Image
+        run: docker push $ACR_LOGIN_SERVER/avyay-frontend:latest
