--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Install Trivy
-        uses: aquasecurity/trivy-action@master
-
       - name: Scan Backend Dockerfile (config scan)
         uses: aquasecurity/trivy-action@master
         with:
@@ -42,8 +39,9 @@ jobs:
 
       - name: Build Backend Image
         run: |
-          docker buildx create --use || true
-          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-backend:latest ./backend --load
+          docker buildx build --platform linux/amd64 \
+            -t $ACR_LOGIN_SERVER/avyay-backend:latest \
+            ./backend --load
 
       - name: Scan Backend Image (vulnerability scan)
         uses: aquasecurity/trivy-action@master
@@ -56,11 +54,21 @@ jobs:
       - name: Push Backend Image
         run: docker push $ACR_LOGIN_SERVER/avyay-backend:latest
 
+      - name: Scan Frontend Dockerfile (config scan)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: config
+          scan-ref: ./frontend
+          format: table
+          exit-code: 1
+
       - name: Build Frontend Image
         run: |
-          docker buildx build --platform linux/amd64 -t $ACR_LOGIN_SERVER/avyay-frontend:latest ./frontend --load
+          docker buildx build --platform linux/amd64 \
+            -t $ACR_LOGIN_SERVER/avyay-frontend:latest \
+            ./frontend --load
 
-      - name: Scan Frontend Image
+      - name: Scan Frontend Image (vulnerability scan)
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.ACR_LOGIN_SERVER }}/avyay-frontend:latest
