--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        
+      - name: Run Backend Pytest
+        run: |
+          pip install -r backend/requirements.txt
+          pytest tests/
 
       - name: Log in to Azure
         uses: azure/login@v1
