--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,4 @@ redis==5.0.3
 python-multipart==0.0.9
 pydantic[email]==1.10.7
 azure-storage-blob==12.10.0  # Add this for Azure Blob Storage
+pytest==7.4.4
