--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         
-      - name: Run Backend Pytest
-        run: |
-          pip install -r backend/requirements.txt
-          PYTHONPATH=backend pytest tests/
+      #- name: Run Backend Pytest
+      #  run: |
+      #    pip install -r backend/requirements.txt
+      #    PYTHONPATH=backend pytest tests/
 
       - name: Log in to Azure
         uses: azure/login@v1
