--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,8 +1,9 @@
 name: PR Sanity Checks
 
 on:
-  pull_request:
-    branches: [main]
+#  pull_request:
+#    branches: [main]
+   workflow_dispatch
 
 jobs:
   pr-checks:
