--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,10 +1,11 @@
 name: CI/CD - Test, Scan, Deploy to AKS
 
 on:
-  pull_request:
+  push:
     branches:
       - main
   workflow_dispatch:
+
 
 env:
   ACR_NAME: reflectacr
