--- a/k8/backend-test-job.yml
+++ b/k8/backend-test-job.yml
@@ -18,5 +18,5 @@ spec:
             - secretRef:
                 name: reflect-secrets
           command: ["/bin/sh", "-c"]
-          args: ["pytest tests/ && curl --fail http://localhost:8000/test-version"]
+          args: ["pytest --cache-clear --disable-warnings tests/ && curl --fail http://localhost:8000/test-version"]
       restartPolicy: Never
