--- a/k8/backend-test-job.yml
+++ b/k8/backend-test-job.yml
@@ -18,5 +18,5 @@ spec:
             - secretRef:
                 name: reflect-secrets
           command: ["/bin/sh", "-c"]
-          args: ["/bin/sh", "-c", "cd /app && PYTHONPATH=. pytest -v --cache-clear --disable-warnings tests/ && curl --fail http://localhost:8000/test-version"]
+          args: ["/bin/sh", "-c", "cd /app && PYTHONPATH=. pytest -v --cache-clear --disable-warnings tests/ && curl --fail http://localhost:8000/test-version && sleep 30"]
       restartPolicy: Never
