--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -82,9 +82,10 @@ jobs:
       - name: ☸️ Run Pytest in AKS Job
         run: |
           kubectl apply -f backend-job.yaml
-          sleep 5
+          sleep 3
           POD=$(kubectl get pods -n $NAMESPACE --selector=job-name=backend-test -o jsonpath='{.items[0].metadata.name}')
-          kubectl wait --for=condition=Ready pod/$POD -n $NAMESPACE --timeout=90s || true
+          echo "Test pod name: $POD"
+          kubectl wait --for=condition=Ready pod/$POD -n $NAMESPACE --timeout=60s || true
           kubectl logs -f $POD -n $NAMESPACE
 
       # --- 🧹 Cleanup Test Job ---
