--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -75,10 +75,12 @@ jobs:
 
       - name: ☸️ Run Pytest in AKS Job
         run: |
-          kubectl delete job backend-test -n $NAMESPACE || true
           kubectl apply -f backend-job.yaml
-          kubectl wait --for=condition=complete job/backend-test -n $NAMESPACE --timeout=120s
-          kubectl logs job/backend-test -n $NAMESPACE
+          sleep 3
+          POD=$(kubectl get pods -n $NAMESPACE --selector=job-name=backend-test -o jsonpath='{.items[0].metadata.name}')
+          echo "Test pod name: $POD"
+          kubectl wait --for=condition=Ready pod/$POD -n $NAMESPACE --timeout=60s || true
+          kubectl logs -f $POD -n $NAMESPACE
 
       - name: 🧹 Clean up test job
         if: always()
