--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -101,7 +101,7 @@ jobs:
       
           # Promote SHA version to latest
           docker tag $ACR_LOGIN_SERVER/avyay-backend:${{ env.IMAGE_TAG }} $ACR_LOGIN_SERVER/avyay-backend:latest
-          docker push $ACR_LOGIN_SERVER/avyay-backend:latest
+          docker push $ACR_LOGIN_SERVER/avyay-backend:latest2
 
 
       - name: 🗑 Delete Version Tag (Optional Cleanup)
@@ -142,7 +142,7 @@ jobs:
       
           # Promote versioned image to latest
           docker tag $ACR_LOGIN_SERVER/avyay-frontend:${{ env.IMAGE_TAG }} $ACR_LOGIN_SERVER/avyay-frontend:latest
-          docker push $ACR_LOGIN_SERVER/avyay-frontend:latest
+          docker push $ACR_LOGIN_SERVER/avyay-frontend:latest2
 
       - name: 🗑 Delete Version Tag (Optional Cleanup)
         if: success()
