--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -100,7 +100,7 @@ jobs:
           docker push $ACR_LOGIN_SERVER/avyay-backend:rollback || true
       
           # Promote SHA version to latest
-          docker tag $ACR_LOGIN_SERVER/avyay-backend:${{ env.IMAGE_TAG }} $ACR_LOGIN_SERVER/avyay-backend:latest
+          docker tag $ACR_LOGIN_SERVER/avyay-backend:${{ env.IMAGE_TAG }} $ACR_LOGIN_SERVER/avyay-backend:latest2
           docker push $ACR_LOGIN_SERVER/avyay-backend:latest2
 
 
@@ -141,7 +141,7 @@ jobs:
           docker push $ACR_LOGIN_SERVER/avyay-frontend:rollback || true
       
           # Promote versioned image to latest
-          docker tag $ACR_LOGIN_SERVER/avyay-frontend:${{ env.IMAGE_TAG }} $ACR_LOGIN_SERVER/avyay-frontend:latest
+          docker tag $ACR_LOGIN_SERVER/avyay-frontend:${{ env.IMAGE_TAG }} $ACR_LOGIN_SERVER/avyay-frontend:latest2
           docker push $ACR_LOGIN_SERVER/avyay-frontend:latest2
 
       - name: 🗑 Delete Version Tag (Optional Cleanup)
