--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,4 @@ pydantic[email]==1.10.7
 azure-storage-blob==12.10.0  # Add this for Azure Blob Storage
 pytest==7.4.4
 httpx==0.27.0
+passlib[bcrypt]
