--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ python-jose>=3.4.0
 redis==5.0.3
 python-multipart==0.0.9
 pydantic[email]==1.10.7
-azure-storage-blob==12.10.0  # Add this for Azure Blob Storage
+azure-storage-blob==12.10.0
 pytest==7.4.4
 httpx==0.27.0
 passlib[bcrypt]
