--- a/k8/frontend-deployment.yml
+++ b/k8/frontend-deployment.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: reflectacr.azurecr.io/avyay-frontend:latest3
+          image: reflectacr.azurecr.io/avyay-frontend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
